--- a/github/workflows/github action.yml
+++ b/github/workflows/github action.yml
@@ -1,12 +1,40 @@
-name: CI
-
+name: Build and Deploy
 on:
-push:
-branches: [ master]
-pull_request:
-branches: [ master ]
+  push:
+    branches:
+      - master
 
 jobs:
-build:
-
-runs-on: ubuntu-latest steps: - uses: actions/checkout@v2 - name: Set up Node.js uses: actions/setup-node@v1 with: node-version: &#x27;14.x&#x27; - name: Install dependencies run: npm install - name: Build run: npm run build - name: Test run: npm test
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build-prod
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: dist
+          path: dist
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
