--- a/github/workflows/master.yml
+++ b/github/workflows/master.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
      - uses: actions/checkout@master
      - uses: actions/setup-node@master
+       env:
+            CI: false
        with:
         node-version: '16.17.1'
      - run: npm install
